--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-core": "^6.26.3",
     "classnames": "^2.2.6",
     "firebase": "^5.5.9",
     "react": "^16.6.3",
