--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-core": "^6.26.3",
     "classnames": "^2.2.6",
     "firebase": "^5.5.9",
+    "history": "^4.7.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
@@ -13,6 +14,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
+    "redux-auth-wrapper": "^2.0.3",
     "redux-firestore": "^0.6.0"
   },
   "scripts": {
